# elo-rank-system

./: .env.example  .gitignore  Cargo.toml  LICENSE
migrations/: 20250201101747_initial.sql
src/: handlers.rs  helpers.rs  main.rs  models.rs  routes.rs
src/models/: matches.rs  mod.rs  params.rs  player.rs
