[package]
name = "elo-rank-system"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
   "postgres",
   "runtime-tokio-native-tls",
   "macros",
   "uuid",
] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.1", features = ["serde", "v4"] }

[package.metadata.sqlx]
offline = true
